fix: platforms gap

--- a/src/components/PlatformsSupported/index.module.scss
+++ b/src/components/PlatformsSupported/index.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  gap: var(--space-xl-fixed);
+  gap: var(--space-2lg-fixed);
 
   svg {
     fill: var(--color-neutral-100);
